initial skeleton created

--- a/report.tex
+++ b/report.tex
@@ -62,7 +62,8 @@
 %----------------------------------------------------------------------------------------
 
 \HRule \\[0.4cm]
-{ \huge \bfseries Ant Colony Based Routing Algorithm}\\[0.4cm] % Title of your document
+{ \huge \bfseries ARA – The Ant-Colony Based Routing Algorithm for MANETs}\\[0.4cm] % Title of your document
+{Mesut G¨unes, Udo Sorges, Imed Bouazizi}
 \HRule \\[1cm]
  
 %----------------------------------------------------------------------------------------
@@ -113,7 +114,6 @@ Dr. Ashikur  Rahman% Supervisor's Name
 
 \newpage
 \begin{abstract}
-There are many routing algorithm available these days. But designing an efficient one is a challenging task.In this paper a routing protocol based on Swarm intelligence is presented.
 
 \end{abstract}
 
