--- a/report.tex
+++ b/report.tex
@@ -121,14 +121,22 @@ Dr. Ashikur  Rahman% Supervisor's Name
 Introduction of the report goes here. 
 
 
-\section{Basics and Background}
+\section{Context and Problem Statement}
 
 
-\section{The Routing Algorithm}
+\section{Idea}
 
-\section{Simulation Results}
+\section{Evaluation Metrics}
+
+
+\section{Evaluation Process}
+
+\section{Evaluation Results}
+
 \section{Limitations of ARA}
+
 \section{Future Works}
+
 \section{Conclusion}
 
 \end{document}
